crates/uitest/fixtures/parser/trait_pub_fn.snap
---
source: crates/uitest/tests/parser.rs
expression: diags
input_file: crates/uitest/fixtures/parser/trait_pub_fn.fe
---
error[1-0001]: modifier is not allowed in this block
  ┌─ trait_pub_fn.fe:2:5
  │
2 │     pub fn foo(mut self)
  │     ^^^ modifier is not allowed in this block

error[1-0001]: modifier is not allowed in this block
  ┌─ trait_pub_fn.fe:3:5
  │
3 │     pub unsafe fn bar(self)
  │     ^^^ modifier is not allowed in this block

error[1-0001]: modifier is not allowed in this block
  ┌─ trait_pub_fn.fe:3:9
  │
3 │     pub unsafe fn bar(self)
  │         ^^^^^^ modifier is not allowed in this block


